src/objects/UC_ResourceRequest__c.object
<CustomObject>
    <fields>
        <fullName>Cornerstone_Grade__c</fullName>
        <label>Cornerstone Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Grade__c</fullName>
        <formula>IF( ISNULL( Cornerstone_Grade__c ) , Grade__c,Cornerstone_Grade__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Request__c</fullName>
        <label>Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>UC ResourceRequests</relationshipLabel>
        <relationshipName>UC_ResourceRequests</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UCName__c</fullName>
        <formula>Universal_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UC Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Code__c</fullName>
        <label>Universal Code</label>
        <referenceTo>Universal_Code__c</referenceTo>
        <relationshipLabel>UC ResourceRequests</relationshipLabel>
        <relationshipName>UC_ResourceRequests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>UC ResourceRequest</label>
    <nameField>
        <displayFormat>UC RES-{0000000}</displayFormat>
        <label>UC ResourceRequest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UC ResourceRequests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>